# offline-translate

./: .gitignore  DESIGN.md  FIXME.md  README.md  app.py  deploy-dev.md  index.html  main.py  pyproject.toml  speak_translate.py  translate.py  web_server.py  wolof_speech_server.py  wolof_to_english_translate_server.py
.specify/memory/: constitution.md
mobile-app/: .env.development  .env.example  .eslintrc.json  CLAUDE.md  FIXME.md  README.md  app.config.ts  app.json  eas.json  eslint.config.js  jest.config.js  jest.setup.ts  lingui.config.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-app/.specify/: feature.json
mobile-app/.specify/extensions/: .registry
mobile-app/.specify/integrations/: claude.manifest.json  speckit.manifest.json
mobile-app/.specify/memory/: constitution.md
mobile-app/.specify/templates/: plan-template.md  tasks-template.md
mobile-app/.specify/workflows/: workflow-registry.json
mobile-app/app/: _layout.tsx  dev-panel.tsx  history.tsx  index.tsx  settings.tsx
mobile-app/app/__tests__/: main-screen.test.tsx
mobile-app/assets/: ICON_SPLASH_TODO.md
mobile-app/assets/patterns/: kente.tsx
mobile-app/scripts/: check-i18n.sh
model-test-scripts/: localenlp-wol-eng-test.py  w2en.py  whosper_test.py
scripts/: auto-start-all.sh  download_speaker_embedding.py  download_speecht5.py  merge-adapter.py  start-all.sh
speaker_embeddings/: README.md
tests/: conftest.py  test_audio_endpoint.py  test_transcode.py
tests/fixtures/: generate_audio_fixtures.py
webapp/: app.js  index.html  styles.css
(+85 files in other folders)
